--- a/website/docs/cli/commands/apply.mdx
+++ b/website/docs/cli/commands/apply.mdx
@@ -10,7 +10,7 @@ description: >-
 The `terraform apply` command executes the actions proposed in a Terraform
 plan.
 
-> **Hands On:** Try the [Apply Terraform Configuration](/terraform/tutorials/cli/apply?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorial to learn how Terraform applies a configuration, how Terraform recovers from errors during apply, and common ways to use this command.
+> **Hands On:** Try the [Apply Terraform Configuration](/terraform/tutorials/cli/apply?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorial to learn how Terraform applies a configuration, how Terraform recovers from errors during apply and common ways to use this command.
 
 ## Usage
 
@@ -48,8 +48,8 @@ Without a saved plan file, `terraform apply` supports all planning modes and pla
 
 The following options change how the apply command executes and reports on the apply operation.
 
-- `-auto-approve` - Skips interactive approval of plan before applying. This
-  option is ignored when you pass a previously-saved plan file, because
+- `-auto-approve` - Skips interactive approval of the plan before applying. This
+  option is ignored when you pass a previously-saved plan file because
   Terraform considers you passing the plan file as the approval and so
   will never prompt in that case.
 
@@ -86,7 +86,7 @@ The following options change how the apply command executes and reports on the a
   if you are running Terraform in a context where its output will be
   rendered by a system that cannot interpret terminal formatting.
 
-- `-parallelism=n` - Limit the number of concurrent operation as Terraform
+- `-parallelism=n` - Limit the number of concurrent operations as Terraform
   [walks the graph](/terraform/internals/graph#walking-the-graph). Defaults to
   10\.
 
