--- a/website/docs/cli/commands/login.mdx
+++ b/website/docs/cli/commands/login.mdx
@@ -34,7 +34,7 @@ not as desired.
 
 If you don't wish to store your API token in the default location, you can
 optionally configure a
-[credentials helper program](/terraform/cli/config/config-file#credentials-helpers) which knows
+[credentials helper program](/terraform/cli/config/config-file#credentials-helpers) that knows
 how to store and later retrieve credentials in some other system, such as
 your organization's existing secrets management system.
 
