--- a/website/docs/cli/commands/graph.mdx
+++ b/website/docs/cli/commands/graph.mdx
@@ -38,7 +38,7 @@ Options:
   This helps when diagnosing cycle errors.
 
 * `-type=plan`      - Type of graph to output. Can be: `plan`, `plan-destroy`, `apply`,
-  `validate`, `input`, `refresh`.
+  `validate`, `input`, or `refresh`.
 
 * `-module-depth=n` - (deprecated) In prior versions of Terraform, specified the
   depth of modules to show in the output.
