--- a/website/docs/language/modules/develop/providers.mdx
+++ b/website/docs/language/modules/develop/providers.mdx
@@ -1,7 +1,7 @@
 ---
 page_title: Providers Within Modules - Configuration Language
 description: >-
-  Learn about provider version constraints, aliases, implicit inheritance, and passing providers explicitly when using providers within Terraform modules.
+  Use providers within Terraform modules. Learn about version constraints, aliases, implicit inheritance, and passing providers explicitly in Terraform modules.
 ---
 
 # Providers Within Modules
