--- a/website/docs/language/modules/develop/structure.mdx
+++ b/website/docs/language/modules/develop/structure.mdx
@@ -1,7 +1,7 @@
 ---
 page_title: Standard Module Structure
 description: >-
-  Learn about the recommended file and directory structure for developing reusable modules distributed in separate repositories.
+  Learn about the recommended file and directory structure for developing reusable modules distributed as separate repositories.
 ---
 
 # Standard Module Structure
