--- a/website/docs/language/state/index.mdx
+++ b/website/docs/language/state/index.mdx
@@ -16,7 +16,7 @@ This state is stored by default in a local file named "terraform.tfstate",
 but we recommend [storing it in Terraform Cloud](/terraform/cloud-docs/migrate)
 to version, encrypt, and securely share it with your team.
 
-Terraform uses state to create plans and make changes to your
+Terraform uses state to determine which changes to make to your
 infrastructure. Prior to any operation, Terraform does a
 [refresh](/terraform/cli/commands/refresh) to update the state with the
 real infrastructure.
