--- a/website/docs/cli/state/recover.mdx
+++ b/website/docs/cli/state/recover.mdx
@@ -1,7 +1,7 @@
 ---
 page_title: Recovering from State Disasters - Terraform CLI
 description: >-
-  Learn how to restore state backups and override Terraform state protections to fix state disasters with the Terraform CLI.
+  Learn how to restore state backups and override Terraform state protections to fix state errors with the Terraform CLI.
 
 ---
 
