--- a/website/docs/cli/cloud/migrating.mdx
+++ b/website/docs/cli/cloud/migrating.mdx
@@ -1,7 +1,7 @@
 ---
 page_title: Initializing and Migrating to Terraform Cloud - Terraform CLI
 description: >-
-  Learn how to migrate from local state, state backends, or a remote backend to Terraform Cloud with the Terraform CLI.
+  Learn how to use the Terraform CLI to migrate local or remote state to Terraform Cloud.
 ---
 
 # Initializing and Migrating
